--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@electron/remote": "^2.1.3",
     "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
-    "uuid": "^9.0.1",
+    "electron-session-proxy": "^1.0.2",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.6.2",
     "element-plus": "^2.3.0",
     "google-translate-open-api": "^1.3.7",
+    "https-proxy-agent": "^7.0.6",
     "puppeteer-core": "^20.0.0",
+    "socks": "^2.8.7",
+    "uuid": "^9.0.1",
     "vue": "^3.3.0",
     "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.0",
@@ -38,19 +41,19 @@
   "build": {
     "appId": "com.example.multi-social-platform",
     "productName": "Multi Social Platform",
-    "mac":{
-     "category": "public.app-category.social-networking",
-     "sign": false
+    "mac": {
+      "category": "public.app-category.social-networking",
+      "sign": false
     },
     "directories": {
       "output": "dist_electron"
     },
     "extraResources": [
-    {
-      "from": "src/common/default-settings.js",
-      "to": "default-settings.js"
-    }
-  ],
+      {
+        "from": "src/common/default-settings.js",
+        "to": "default-settings.js"
+      }
+    ],
     "files": [
       "dist/**/*",
       "node_modules/**/*",
