--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "element-plus": "^2.3.0",
     "google-translate-open-api": "^1.3.7",
     "https-proxy-agent": "^7.0.6",
+    "lodash": "^4.17.21",
     "puppeteer-core": "^20.0.0",
     "socks": "^2.8.7",
     "uuid": "^9.0.1",
