--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "electron-updater": "^6.6.2",
     "element-plus": "^2.3.0",
     "google-translate-open-api": "^1.3.7",
+    "http-proxy": "^1.18.1",
     "https-proxy-agent": "^7.0.6",
     "puppeteer-core": "^20.0.0",
     "socks": "^2.8.7",
