change ci from v3-v4

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,66 @@
-name: Build
+name: Build/release
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  # 也可以手动触发
+  workflow_dispatch:
 
 jobs:
-  build-mac:
-    runs-on: macos-latest
+  release:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest]
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Check out Git repository
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run electron-pack
-      - uses: actions/upload-artifact@v3
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build application
+        run: npm run build
+
+      - name: Package Electron app (Mac)
+        if: matrix.os == 'macos-latest'
+        run: npm run electron-pack
+        env:
+          CSC_IDENTITY_AUTO_DISCOVERY: false
+
+      - name: Package Electron app (Windows)
+        if: matrix.os == 'windows-latest'
+        run: npm run electron-pack
+        env:
+          CSC_IDENTITY_AUTO_DISCOVERY: false
+
+      - name: Upload artifacts (Mac)
+        if: matrix.os == 'macos-latest'
+        uses: actions/upload-artifact@v4
         with:
           name: mac-build
-          path: dist_electron/**/*
+          path: |
+            dist_electron/*.dmg
+            dist_electron/*.zip
+            dist_electron/mac/**/*
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-      - run: npm install
-      - run: npm run electron-pack
-      - uses: actions/upload-artifact@v3
+      - name: Upload artifacts (Windows)
+        if: matrix.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
         with:
           name: windows-build
-          path: dist_electron/**/*
+          path: |
+            dist_electron/*.exe
+            dist_electron/*.msi
+            dist_electron/win-unpacked/**/*
