--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "multi-social-platform",
+  "name": "Web4X-social-platform",
+  "description": "A multi social platform application.",
+  "author": "Web4X",
   "version": "1.0.0",
   "main": "public/electron.js",
   "homepage": "./",
+  "icon": "public/icons/app-icon.png",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "electron": "electron .",
-    "electron-dev": "concurrently \"npm run serve\" \"wait-on http://localhost:8080 && cross-env NODE_ENV=development electron .\"",
-    "electron-fast": "npm run build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac",
-    "electron-pack": "npm run build && electron-builder",
-    "preelectron-pack": "npm run build"
-  },
+  "serve": "vue-cli-service serve",
+  "build": "vue-cli-service build",
+  "electron": "electron .",
+  "electron-dev": "concurrently \"yarn serve\" \"wait-on http://localhost:8080 && cross-env NODE_ENV=development electron .\"",
+  "electron-fast": "yarn build && cross-env CSC_IDENTITY_AUTO_DISCOVERY=false electron-builder --mac",
+  "electron-pack": "electron-builder",
+  
+  "generate-icons": "electron-icon-builder --input=public/icons/app-icon.png --output=build --flatten",
+  "prebuild": "yarn generate-icons",
+  "preelectron-pack": "yarn build"
+},
   "dependencies": {
     "@electron/remote": "^2.1.3",
     "@element-plus/icons-vue": "^2.1.0",
@@ -45,9 +51,23 @@
   "build": {
     "appId": "com.example.multi-social-platform",
     "productName": "Multi Social Platform",
+    "directories": {
+      "buildResources": "build",        
+      "output": "dist_electron"
+    },
     "mac": {
       "category": "public.app-category.social-networking",
-      "sign": false
+      "sign": false,
+      "icon": "build/icons/icon.icns"
+    },
+    "win": {
+      "icon": "build/icons/icon.ico",   
+      "target": [
+        {
+          "target": "nsis",
+          "arch": ["x64"]
+        }
+      ]
     },
     "directories": {
       "output": "dist_electron"
